--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,12 @@
 page-home {
 
 }
+
+ion-card-header {
+    background-color: rgb(226, 242, 247);
+}
+
+.results.col{
+    width: 33.33%;
+    text-align: center;
+}
